--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
                             <div class="device">
                                 <div>
                                 <div >
-                                  <img src="/assets/img/skaterboi.png" loading="lazy" width="190%" height="190%" alt="snack app" >
+                                  <!-- <img src="/assets/img/skaterboi.png" class="anime" loading="lazy" width="190%" height="190%" alt="snack app" > -->
+                                  <img src="/assets/img/skaterboi.png" class="anime" loading="lazy" sizes="(max-width: 159%) 100vw, (max-width: 299%) 91vw, 678px" width="190%" alt="snack app" srcset="/assets/img/skaterboi.png-p-500.png 500w, assets/img/skaterboi.png 1440w">
                                 </div>
                             </div>
                         </div>
@@ -105,11 +106,8 @@
             <div class="row gx-5 justify-content-center">
                 <div class="col-xl-8">
                     <div class="h2 fs-2 text-white mb-4">
-                        <!-- "An intuitive solution to a common problem that we all face,
-                        wrapped up in a single app!" -->
                         True love story never ends..! <br><br> ARE YOU READY TO TAKE A CHANCE..?
                     </div>
-                    <!-- <img src="assets/img/tnw-logo.svg" alt="..." style="height: 3rem" /> -->
                 </div>
             </div>
         </div>
@@ -164,10 +162,7 @@
                    
                         <div class="device-wrapper">
                             <div class="device">
-                               
-                                    <img src="/assets/img/spice.png" loading="lazy" width="110%" height="110%" alt="snack app" >
-
-                                <!-- </div> -->
+                                    <img src="/assets/img/spice.png" class="anime2" loading="lazy" width="110%" height="110%" alt="snack app" >
                             </div>
                         </div>
                     </div>
@@ -188,7 +183,7 @@
                         deserves: better.</p>
                 </div>
                 <div class="col-sm-8 col-md-6">
-                    <div class="px-5 px-sm-0"><img class="img-fluid rounded-circle"
+                    <div class="px-5 px-sm-0"><img class="img-fluid rounded-circle" id="anime3"
                             src="/assets/img/couples.png" alt="..." /></div>
                 </div>
             </div>
